--- a/lab/ast.tex
+++ b/lab/ast.tex
@@ -1,3 +1,6 @@
 \begin{enumerate}
+\item Complete the code marked with \texttt{...} so that an AST is constructed for each program, using the supplied functions \texttt{newnode()} and \texttt{addchild()}.
+% struct node *newnode(enum category category, char *token);
+% void addchild(struct node *parent, struct node *child);
 \item Add to the language the ability to calculate arithmetic expressions (\texttt{+-*/}) involving variables and constants.
 \end{enumerate}
