--- a/lab/codegen.tex
+++ b/lab/codegen.tex
@@ -1,3 +1,5 @@
+% the first exercise should be a manual LLVM IR implementation
+
 We shall consider only type double for all of the following exercises.
 \begin{enumerate}
 \item Implement code generation for multiplication.
@@ -8,5 +10,5 @@ We shall consider only type double for all of the following exercises.
 \item Modify the code so that assignments to double variables are allowed.
 \item Implement the case of identifiers used in expressions.
 \end{enumerate}
-\item According to the language semantics, it is possible to assign an integer value to a double (but not the other way around). Implement code generation to convert Natural constants to double before assigning their value to a double variable.
+\item According to the language semantics, it is possible to assign integer values to double variables and \textit{vice versa}. In both cases it is necessary to make the appropriate conversion. Natural constants must be converted to double before assigning their value to a variable of double type; and Decimal constants must be converted to integer before assigning their value to an integer variable. Implement these two cases.
 \end{enumerate}
