--- a/lab/lab.tex
+++ b/lab/lab.tex
@@ -6,6 +6,9 @@
 \author{Raul Barbosa}
 \maketitle
 
+\section{Lexical analysis}
+\input{lexic.tex}
+
 \section{Abstract syntax tree}
 \input{ast.tex}
 
