implicit conversion warning

--- a/lab/semantics.tex
+++ b/lab/semantics.tex
@@ -1,5 +1,5 @@
 \begin{enumerate}
 \item Modify the code so that undeclared symbols are reported through an error message.
 \item Modify the code to show the line and column numbers where semantic errors are identified.
-\item Modify the code so that \textit{expression} nodes of categories Identifier, Natural and Decimal are annotated with the type (integer\_type or double\_type). Then implement the following semantic check: assigning a double value to an integer variable should report a compiler warning (implicit conversion from double to integer).
+\item Modify the code so that \textit{expression} nodes of categories Identifier, Natural and Decimal are annotated with the type (integer\_type or double\_type). Then implement the following semantic check: assigning a double (Identifier or Decimal) to an integer variable should report a compiler warning (implicit conversion from double to integer).
 \end{enumerate}
