--- a/lab/semantics.tex
+++ b/lab/semantics.tex
@@ -1,7 +1,15 @@
+Restriction: there is a single symbol table for the entire program. As a consequence, functions and parameters cannot share the same name (even parameters of different functions).
 \begin{enumerate}
 \item Modify the code so that undeclared symbols are reported through an error message.
-\item Modify the code to show the line and column numbers where semantic errors are identified.
+\item Modify the code to show the line and column numbers where semantic errors are identified. There are several possibilities: lexical analysis returns a token object; use locations.
 \item Modify the code so that \textit{expression} nodes of categories Identifier, Natural and Decimal are annotated with the type (integer\_type or double\_type). Then implement the following semantic check: assigning a double (Identifier or Decimal) to an integer variable should report a compiler warning: implicit conversion from double to integer.
+\item Final, long exercise: check that variables used in expressions are parameters of the respective function. This requires scopes...
 \end{enumerate}
 
 % each scope (loop, if) could have its own variables and there could be an exercise on that
+
+% Exercise: show the symbol table
+
+% Exercise: show tree with type annotations
+
+% trivial exercise: check for existence of main function with integer parameter
