--- a/lab/semantics.tex
+++ b/lab/semantics.tex
@@ -6,10 +6,12 @@ Restriction: there is a single symbol table for the entire program. As a consequ
 \item Final, long exercise: check that variables used in expressions are parameters of the respective function. This requires scopes...
 \end{enumerate}
 
+% check only for the right number of arguments! (not their type, ever, because in Petit we can promote and underpromote)
+
 % each scope (loop, if) could have its own variables and there could be an exercise on that
 
 % Exercise: show the symbol table
 
 % Exercise: show tree with type annotations
 
-% trivial exercise: check for existence of main function with integer parameter
+% trivial exercise: check for existence of main function with integer parameter (maybe we don't want this, actually, to generate basic code without a main function, at the beginning)
