comments (unterminated allowed)

--- a/lab/ast.tex
+++ b/lab/ast.tex
@@ -1,3 +1,7 @@
+% first exercise session: the basic grammar, starting with expressions
+
+% second exercise session: AST construction
+
 \begin{enumerate}
 \item Complete the code marked with \texttt{...} so that an AST is constructed for each program, using the supplied functions \texttt{newnode()} and \texttt{addchild()}.
 % struct node *newnode(enum category category, char *token);
