--- a/lab/lexic.tex
+++ b/lab/lexic.tex
@@ -2,3 +2,5 @@
 \item Identifiers
 \item Comments of the type /* ... */ keeping line and column correctly updated.
 \end{enumerate}
+
+% final exercise on illegal strings, to work on states
