--- a/lab/semantics.tex
+++ b/lab/semantics.tex
@@ -15,3 +15,5 @@ Restriction: there is a single symbol table for the entire program. As a consequ
 % Exercise: show tree with type annotations
 
 % trivial exercise: check for existence of main function with integer parameter (maybe we don't want this, actually, to generate basic code without a main function, at the beginning)
+
+% last exercise should be about annotating the tree with the types, because it takes the most time to do
