lexical analysis exercises

--- a/exercises/ast.tex
+++ b/exercises/ast.tex
@@ -1,4 +1,6 @@
-% first exercise session: the basic grammar, starting with expressions
+% first exercise session: the basic grammar, starting with expressions, check if the input is in the grammar or not
+
+% no AST in the first lecture, but possibly evaluating expressions with variables
 
 % second exercise session: AST construction
 
