conditional generation of main() and minor updates

--- a/tutorial/codegen.tex
+++ b/tutorial/codegen.tex
@@ -25,3 +25,5 @@ Restriction: We shall consider only type integer for all of the following exerci
 %       e2 = codegen_expression(right child)
 %       new_temporary = result of multiplying e1 * e2
 %       return new_temporary and post-increment it by 1 */
+
+% at the very end, Exercise: support for double parameters...? */
